<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageScaleActivity">

    <ImageView
        android:id="@+id/iv_scale"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#57ABED"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/odvnz" />

    <Button
        android:id="@+id/btn_centerInside"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_pressed_orig"
        android:text="@string/center_inside"
        android:textColor="#9C27B0"
        app:layout_constraintBottom_toBottomOf="@+id/btn_centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/btn_centerCrop"
        app:layout_constraintTop_toTopOf="@+id/btn_centerCrop" />

    <Button
        android:id="@+id/btn_centerCrop"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_normal_orig"
        android:text="@string/center_crop"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/btn_fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/btn_centerInside"
        app:layout_constraintStart_toEndOf="@+id/btn_fitCenter"
        app:layout_constraintTop_toTopOf="@+id/btn_fitCenter"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_fitCenter"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_pressed_orig"
        android:text="@string/fit_center"
        android:textColor="#F44336"
        app:layout_constraintEnd_toStartOf="@+id/btn_centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_scale" />

    <Button
        android:id="@+id/btn_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button_pressed_orig"
        android:text="@string/center"
        android:textColor="#673AB7"
        app:layout_constraintEnd_toStartOf="@+id/btn_fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fitCenter" />

    <Button
        android:id="@+id/btn_fitXY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button_normal_orig"
        android:text="@string/fit_xy"
        android:textColor="#009688"
        app:layout_constraintBottom_toBottomOf="@+id/btn_center"
        app:layout_constraintEnd_toStartOf="@+id/btn_fitStart"
        app:layout_constraintStart_toEndOf="@+id/btn_center"
        app:layout_constraintTop_toTopOf="@+id/btn_center" />

    <Button
        android:id="@+id/btn_fitStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/button_normal_orig"
        android:text="@string/fit_start"
        android:textColor="#8BC34A"
        app:layout_constraintBottom_toBottomOf="@+id/btn_fitXY"
        app:layout_constraintEnd_toStartOf="@+id/btn_fitEnd"
        app:layout_constraintStart_toEndOf="@+id/btn_fitXY"
        app:layout_constraintTop_toTopOf="@+id/btn_fitXY" />

    <Button
        android:id="@+id/btn_fitEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_pressed_orig"
        android:text="@string/fit_end"
        android:textColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="@+id/btn_fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_fitStart"
        app:layout_constraintTop_toTopOf="@+id/btn_fitStart" />
</androidx.constraintlayout.widget.ConstraintLayout>